--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <version>3.1.2</version>
         <configuration>
           <includes>
-            <include>**/runners/*Test.java</include>
+            <include>**/runners/*Runner.java</include>
           </includes>
         </configuration>
       </plugin>
